trying to fix autoscale on mobile 2

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -111,7 +111,7 @@
     padding: 0.5rem 2.5rem;
     background-color: $color-bkgrd-white;
     @include for-medium-down {
-      font-size: 1.75rem;
+      font-size: 16px;
     }
   }
 }
